[gd_scene load_steps=18 format=3 uid="uid://cuip7782hhwtg"]

[ext_resource type="Script" uid="uid://dhvwoex6t5enj" path="res://Sample/sample_selection.gd" id="1_kdmyb"]
[ext_resource type="Texture2D" uid="uid://4vgsdvadyr57" path="res://Menu Assets/Play.png" id="2_knn4x"]
[ext_resource type="Texture2D" uid="uid://xab3sfadv3v" path="res://Menu Assets/cards/Lesson_Cards_001.png" id="3_7yxdc"]
[ext_resource type="Texture2D" uid="uid://efsmbuddjoaj" path="res://Menu Assets/Menu_BG.png" id="3_tu1r8"]
[ext_resource type="Texture2D" uid="uid://cfnmmrrwxo1xy" path="res://Menu Assets/cards/Lesson_Cards_002.png" id="4_bulmj"]
[ext_resource type="Texture2D" uid="uid://c7rxka2885mf4" path="res://Menu Assets/cards/Lesson_Cards_003.png" id="5_rpu63"]
[ext_resource type="Texture2D" uid="uid://cwy4mxak8ug2b" path="res://Menu Assets/cards/Lesson_Cards_004.png" id="6_tu1r8"]
[ext_resource type="Texture2D" uid="uid://453k2lyklguq" path="res://Menu Assets/cards/Lesson_Cards_005.png" id="7_m5wym"]
[ext_resource type="Texture2D" uid="uid://c0630m7vl7ohs" path="res://Menu Assets/cards/Lesson_Cards_006.png" id="8_aapnh"]
[ext_resource type="Texture2D" uid="uid://csfjm8c4n3nsw" path="res://Menu Assets/cards/Lesson_Cards_007.png" id="9_5bfpi"]
[ext_resource type="Texture2D" uid="uid://d4cpyrtnriltd" path="res://Menu Assets/cards/Lesson_Cards_008.png" id="10_wn3a0"]
[ext_resource type="Texture2D" uid="uid://bk12hqlfhcuvm" path="res://Menu Assets/cards/Lesson_Cards_009.png" id="11_88up4"]
[ext_resource type="Material" uid="uid://dykh6lk1hfo2u" path="res://Menu Shaders/Asset_Color.tres" id="12_rpu63"]
[ext_resource type="Texture2D" uid="uid://r0x5i2s0vspc" path="res://Menu Assets/Selection Title.png" id="13_rpu63"]
[ext_resource type="Texture2D" uid="uid://dl6regabkjdu5" path="res://Menu Assets/cards/Lesson_Cards_010.png" id="14_aapnh"]
[ext_resource type="Texture2D" uid="uid://cpd48g2put76u" path="res://Menu Assets/Back.png" id="15_m5wym"]
[ext_resource type="AudioStream" uid="uid://dk57nyfbj42mm" path="res://Audio/select_sound.wav" id="17_5bfpi"]

[node name="sample_selection" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_kdmyb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -47.0
offset_top = -25.0
offset_right = 1973.0
offset_bottom = 1123.0
color = Color(1, 0.752941, 0.145098, 1)
metadata/_edit_lock_ = true

[node name="MenuBg" type="TextureRect" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.258824)
material = ExtResource("12_rpu63")
layout_mode = 0
offset_left = -27.0
offset_top = -11.0
offset_right = 2533.0
offset_bottom = 1429.0
scale = Vector2(0.785633, 0.785633)
texture = ExtResource("3_tu1r8")

[node name="Lesson1" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 849.0
offset_top = 121.0
offset_right = 1695.0
offset_bottom = 313.0
text = "LESSON 1"

[node name="Lesson2" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 849.0
offset_top = 355.0
offset_right = 1695.0
offset_bottom = 547.0
text = "LESSON 2"

[node name="Lesson3" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 871.0
offset_top = 597.0
offset_right = 1717.0
offset_bottom = 789.0
text = "LESSON 3"

[node name="Play" type="Sprite2D" parent="."]
material = ExtResource("12_rpu63")
position = Vector2(392, 552)
scale = Vector2(0.916, 0.916)
texture = ExtResource("2_knn4x")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 768.0
offset_right = 1852.0
offset_bottom = 1185.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.916, 0.916)
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 125
alignment = 1

[node name="MarginTop" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 175

[node name="Lesson1" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
material = ExtResource("12_rpu63")
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("3_7yxdc")

[node name="Lesson2" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
material = ExtResource("12_rpu63")
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("4_bulmj")

[node name="Lesson3" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
material = ExtResource("12_rpu63")
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("5_rpu63")

[node name="Lesson4" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
material = ExtResource("12_rpu63")
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("6_tu1r8")

[node name="Lesson5" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
material = ExtResource("12_rpu63")
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("7_m5wym")

[node name="Lesson6" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
material = ExtResource("12_rpu63")
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("8_aapnh")

[node name="Lesson7" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
material = ExtResource("12_rpu63")
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("9_5bfpi")

[node name="Lesson8" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
material = ExtResource("12_rpu63")
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("10_wn3a0")

[node name="Lesson9" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
material = ExtResource("12_rpu63")
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("11_88up4")

[node name="Lesson10" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
material = ExtResource("12_rpu63")
layout_mode = 2
mouse_filter = 1
texture_normal = ExtResource("14_aapnh")

[node name="MarginBottom" type="MarginContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 125

[node name="SelectionTitle" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 592.0
offset_right = 1454.0
offset_bottom = 192.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="SelectionTitle"]
material = ExtResource("12_rpu63")
layout_mode = 2
texture = ExtResource("13_rpu63")

[node name="Back" type="TouchScreenButton" parent="."]
material = ExtResource("12_rpu63")
position = Vector2(133, 45)
scale = Vector2(0.554455, 0.554455)
texture_normal = ExtResource("15_m5wym")

[node name="ClickSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_5bfpi")

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
